<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Piano">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Piano"
        android:textAlignment="center"
        android:textColor="@color/pureBlack"
        android:textSize="22sp"
        android:textStyle="bold|italic" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/CDBtn"
                android:layout_width="50dp"
                android:layout_height="135dp"
                android:text="@string/CDBtn"
                android:background="@color/pureBlack"
                android:textColor="@color/White"
                tools:layout_editor_absoluteX="199dp"
                tools:layout_editor_absoluteY="106dp"
                android:layout_marginLeft="40dp"/>

            <Button
                android:id="@+id/DEBtn"
                android:layout_width="50dp"
                android:layout_height="135dp"
                android:text="@string/DEBtn"
                android:background="@color/pureBlack"
                android:textColor="@color/White"
                tools:layout_editor_absoluteX="248dp"
                tools:layout_editor_absoluteY="106dp"
                android:layout_marginLeft="20dp"/>

            <Button
                android:id="@+id/FGBtn"
                android:layout_width="50dp"
                android:layout_height="135dp"
                android:text="@string/FGBtn"
                android:background="@color/pureBlack"
                android:textColor="@color/White"
                android:layout_marginLeft="80sp"
                tools:layout_editor_absoluteX="349dp"
                tools:layout_editor_absoluteY="106dp" />

            <Button
                android:id="@+id/GABtn"
                android:layout_width="50dp"
                android:layout_height="135dp"
                android:text="@string/GABtn"
                android:background="@color/pureBlack"
                android:textColor="@color/White"
                tools:layout_editor_absoluteX="396dp"
                tools:layout_editor_absoluteY="106dp"
                android:layout_marginLeft="20dp"/>

            <Button
                android:id="@+id/ABBtn"
                android:layout_width="50dp"
                android:layout_height="135dp"
                android:text="@string/ABBtn"
                android:background="@color/pureBlack"
                android:textColor="@color/White"
                tools:layout_editor_absoluteX="396dp"
                tools:layout_editor_absoluteY="106dp"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/CBtn"
                android:layout_width="57dp"
                android:layout_height="120dp"
                android:layout_marginHorizontal="5dp"
                android:background="@color/softGrey"
                android:onClick="CNote"
                android:text="@string/CBtn"
                android:textColor="@color/pureBlack"
                tools:layout_editor_absoluteX="175dp"

                tools:layout_editor_absoluteY="200dp" />

            <Button
                android:id="@+id/DBtn"
                android:layout_width="57dp"
                android:layout_height="120dp"
                android:layout_marginHorizontal="5dp"
                android:background="@color/softGrey"
                android:text="@string/DBtn"
                android:textColor="@color/pureBlack"
                tools:layout_editor_absoluteX="175dp"
                tools:layout_editor_absoluteY="200dp" />

            <Button
                android:id="@+id/EBtn"
                android:layout_width="57dp"
                android:layout_height="120dp"
                android:layout_marginHorizontal="5dp"
                android:background="@color/softGrey"
                android:text="@string/EBtn"
                android:textColor="@color/pureBlack"
                tools:layout_editor_absoluteX="274dp"
                tools:layout_editor_absoluteY="200dp" />

            <Button
                android:id="@+id/FBtn"
                android:layout_width="57dp"
                android:layout_height="120dp"
                android:layout_marginHorizontal="5dp"
                android:background="@color/softGrey"
                android:text="@string/FBtn"
                android:textColor="@color/pureBlack"
                tools:layout_editor_absoluteX="322dp"
                tools:layout_editor_absoluteY="200dp" />

            <Button
                android:id="@+id/GBtn"
                android:layout_width="57dp"
                android:layout_height="120dp"
                android:layout_marginHorizontal="5dp"
                android:background="@color/softGrey"
                android:text="@string/GBtn"
                android:textColor="@color/pureBlack"
                tools:layout_editor_absoluteX="371dp"
                tools:layout_editor_absoluteY="200dp" />

            <Button
                android:id="@+id/ABtn"
                android:layout_width="57dp"
                android:layout_height="120dp"
                android:layout_marginHorizontal="5dp"
                android:background="@color/softGrey"
                android:text="@string/ABtn"
                android:textColor="@color/pureBlack"
                tools:layout_editor_absoluteX="421dp"
                tools:layout_editor_absoluteY="200dp" />

            <Button
                android:id="@+id/BBtn"
                android:layout_width="57dp"
                android:layout_height="120dp"
                android:layout_marginHorizontal="5dp"
                android:background="@color/softGrey"
                android:text="@string/BBtn"
                android:textColor="@color/pureBlack"
                tools:layout_editor_absoluteX="469dp"
                tools:layout_editor_absoluteY="200dp" />

            <Button
                android:id="@+id/CplusBtn"
                android:layout_width="57dp"
                android:layout_height="120dp"
                android:layout_marginHorizontal="5dp"
                android:background="@color/softGrey"
                android:text="@string/CplusBtn"
                android:textColor="@color/pureBlack"
                tools:layout_editor_absoluteX="469dp"
                tools:layout_editor_absoluteY="200dp" />

        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>