<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:screenOrientation="portrait">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/Title"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/pureBlack"/>

            <Button
                android:id="@+id/PianoBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Piano"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:onClick="GotoPiano"/>

    <Button
        android:id="@+id/SoundsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sounds"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:textStyle="bold|italic" />
        <Button
            android:id="@+id/TiarBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Tiar"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:textStyle="bold|italic"/>

</LinearLayout>